# pylogger

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yaml
docs/source/: conf.py  index.rst  modules.rst
logger/: __init__.py  logger.py
tests/logger/: test_logger.py
