[tool.poetry]
name = "logger"
version = "0.1.0"
description = "Logger ."
authors = [
    "felipefuhr, <felipefuhr7@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/FelipeFuhr/pylogger"

[tool.poetry.dependencies]
python = ">=3.8.10, <=3.10.6"
python-json-logger = "~2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "~7.2.2"
testfixtures = "~7.1.0"
pre-commit = "~3.1.1"
flake8 = "~6.0.0"
isort = "~5.12.0"
coverage-badge = "~1.1.0"
anybadge = "~1.14.0"
black = "~23.1.0"
bumpver = "~2022.1120"
pytest-cov = "~4.0.0"
sphinx = "~6.1.3"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = ''''''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "[version-update] {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"README.md" = [
    "version {version}",
    "img.shields.io/static/v1.svg?label=version&message={version}&color=blue"
]
"logger/VERSION" = [
    "{version}",
]
